@@ -2,6 +2,12 @@ fidoconfig 0.91
 ---------------
 
 ----- cvs ci ------
+Sat Feb  5 02:36:03 NOVT 2000
+max:
+* bugfix for groups: allocation memory for \0 (patch from Serguei)
+* export, import, mandatory makes as unsigned int
+
+----- cvs ci ------
 Tue Feb  1 22:19:01 NOVT 2000
 max:
 * added getEchoArea()
